# BackupGD

./: .gitignore  README.md  entry_points.cfg  requirements.txt  setup.cfg
backupGD/: __init__.py  __main__.py  api_wapper.py  backup.py  cli.py
docs/: README.html  backupGD.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/.doctrees/: README.doctree  backupGD.doctree  environment.pickle  index.doctree  modules.doctree
docs/_sources/: modules.rst.txt
docs_src/: backupGD.rst  conf.py
tests/: __init__.py  test_api_wrapper.py  test_backup.py  test_credentials.py
