[metadata]
name = backupGD
version = attr: backupGD.__version__
author = Shuhei Nitta
author_email = hinihatetsu@gmail.com
url = https://github.com/hinihat/backupGD
description = Backup files to GoogleDrive
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    google-api-python-client 
    google-auth
    google-auth-oauthlib 
    schedule
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    tests

[mypy]
python_version = 3.9
ignore_missing_imports = True
strict = True
